[tool.poetry]
name = "ignori"
version = "0.1.0"
description = ""
authors = ["Gamaliel Garcia <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.60.1"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "N",
    "UP",
    "ANN",
    "BLE",
    "A",
    "COM",
    "C4",
    "DTZ",
    "Q",
    "SLF",
    "SIM",
    "PTH",
]
ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
