[tool.poetry]
name = "ignori"
version = "0.1.0"
description = ""
authors = ["Gamaliel Garcia <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.72.0"
rich = "^13.7.1"
pipe = "^2.2"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
ruff = "^0.4.6"
mypy = "^1.10.0"
pytest = "^8.2.1"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

exclude = [".git", "__pycache__", "styles", ".vscode"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "N",
    "UP",
    "ANN",
    "BLE",
    "A",
    "COM",
    "C4",
    "DTZ",
    "Q",
    "SLF",
    "SIM",
    "PTH",
    "I",
]
ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
check_untyped_defs = true

ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true

warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

no_implicit_reexport = true
allow_redefinition = true

show_error_codes = true
